<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.blockstock</groupId>
  <artifactId>CordSync</artifactId>
  <version>1.3.5</version>
  <name>CordSync</name>
  <description>Discord ↔ Minecraft account linking, verification and reward system.</description>
  <url>https://github.com/musbabaff/CordSync</url>

  <licenses>
    <license>
      <name>Custom EULA (All Rights Reserved)</name>
      <url>https://github.com/musbabaff/CordSync/blob/main/LICENSE</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/musbabaff/CordSync</url>
    </repository>
  </distributionManagement>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>

    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>

    <repository>
      <id>sonatype</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
    </repository>

    <repository>
      <id>dv8tion</id>
      <url>https://m2.dv8tion.net/releases</url>
    </repository>

    <repository>
      <id>luckperms-repo</id>
      <url>https://repo.luckperms.net/releases/</url>
    </repository>
    <repository>
      <id>placeholderapi</id>
      <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>
  </repositories>

  <dependencies>

    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.21.4-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>net.dv8tion</groupId>
      <artifactId>JDA</artifactId>
      <version>5.0.0-beta.24</version>
    </dependency>

    <dependency>
      <groupId>com.neovisionaries</groupId>
      <artifactId>nv-websocket-client</artifactId>
      <version>2.14</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.13</version>
    </dependency>

    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1.1</version>
    </dependency>

    <dependency>
      <groupId>net.luckperms</groupId>
      <artifactId>api</artifactId>
      <version>5.4</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>me.clip</groupId>
      <artifactId>placeholderapi</artifactId>
      <version>2.11.6</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>club.minnced</groupId>
      <artifactId>discord-webhooks</artifactId>
      <version>0.8.4</version>
    </dependency>

    <!-- bStats -->
    <dependency>
        <groupId>org.bstats</groupId>
        <artifactId>bstats-bukkit</artifactId>
        <version>3.2.1</version>
        <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals><goal>shade</goal></goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <relocations>
                <relocation>
                  <pattern>org.bstats</pattern>
                  <shadedPattern>com.blockstock.cordsync.metrics</shadedPattern>
                </relocation>
              </relocations>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>${maven.compiler.release}</release>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Automatic-Module-Name>com.velvexa.vxlinker.api</Automatic-Module-Name>
              <Built-By>Velvexa</Built-By>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>

    </plugins>
  </build>
</project>
